<resources>
    <string name="app_name">News_App</string>
    <string name="registration_fragment">RegistrationFragment</string>
    <string name="login_fragment">LoginFragment</string>
    <string name="login_tv_text">Регистрация</string>
    <string name="login_button_text">Войти</string>
    <string name="autorization">Авторизация</string>
    <string name="enter_email">Введите e-mail</string>
    <string name="enter_password">Введите пароль</string>
</resources>